--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,9 @@ bind - split-window -v -c "#{pane_current_path}"
 # Enable mouse support
 set -g mouse on # scroll buffer, select/resize pane, window
 
+# Use system clipboard
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 # Set vi as default editor
 set -g status-keys vi
 
